--- a/podrzavaju-styles.css
+++ b/podrzavaju-styles.css
@@ -86,6 +86,7 @@ h1 {
   position: relative;
   top: 60px;
   box-shadow: 1px 3px 10px #b4b3b3;
+  padding: 10px 10px;
 }
 .content-paragraph p {
   font-size: 14px;
@@ -124,20 +125,52 @@ h1 {
   }
   20% {
     transform: translate(0);
+    opacity: 1;
   }
-  40% {
+  25% {
+    opacity: 0;
+    transform: translate(0);
+  }
+  26% {
     transform: translate(-100%);
+  }
+  30% {
+    opacity: 1;
+    transform: translate(-100%);
+  }
+  45% {
+    transform: translate(-100%);
+    opacity: 1;
   }
   50% {
+    opacity: 0;
     transform: translate(-100%);
+  }
+  52% {
+    transform: translate(-200%);
+    opacity: 0;
+  }
+  55% {
+    transform: translate(-200%);
+    opacity: 1;
   }
   60% {
     transform: translate(-200%);
+    opacity: 1;
   }
   70% {
     transform: translate(-200%);
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+    transform: translate(-200%);
+  }
+  76% {
+    transform: translate(-300%);
   }
   80% {
+    opacity: 1;
     transform: translate(-300%);
   }
   90% {
@@ -145,6 +178,14 @@ h1 {
   }
   to {
     transform: translate(-300%);
+  }
+}
+@keyframes fade{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
   }
 }
 .sponsors-section {
